correct alignment of mobile show help tab button

--- a/stylesheets/_component.tab-help.scss
+++ b/stylesheets/_component.tab-help.scss
@@ -66,6 +66,7 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
     float: right;
     font-size: .9em;
     line-height: normal;
+    padding: 0;
     text-decoration: none;
     transition: all 100ms ease-in;
 
